Fixed alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,7 @@ header li { display: inline; margin-left: 20px; }
 footer { clear: both; background-color: #000; padding: 20px 0; color: #666; margin-top: 20px; }
 footer a { color: #CCC; }
 
-#splash { text-align: center; color: #FFF; background: #000 url(../assets/splash.png) no-repeat; height: 350px; margin-bottom: 20px; }
+#splash { text-align: center; color: #FFF; background: #000 url(../assets/splash.png) repeat-x; height: 350px; margin-bottom: 20px; }
 #splash h1 { padding-top: 20px; font-size: 36px; font-weight: normal; line-height: 40px; }
 #splash h2 { padding: 30px 0; font-size: 16px; font-weight: normal; }
 
